force-app/main/default/objects/Pandadoc_Quote_Template_Mapping__mdt/Pandadoc_Quote_Template_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Maps Divisions (Slate, Align, Palermo) to the Pandadoc template they use for button-click Quote generation.</description>
    <label>Pandadoc Quote Template Mapping</label>
    <pluralLabel>Pandadoc Quote Template Mappings</pluralLabel>
</CustomObject>