force-app/main/default/objects/Pandadoc_Quote_Template_Mapping__mdt/fields/Division_Name__c.field-meta.xml
<CustomField>
    <fullName>Division_Name__c</fullName>
    <label>Division Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>