force-app/main/default/objects/Pandadoc_Quote_Template_Mapping__mdt/fields/Pandadoc_Call_Sheet_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Pandadoc_Call_Sheet_Template_Id__c</fullName>
    <label>Pandadoc Call Sheet Template Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>