force-app/main/default/objects/Pandadoc_Quote_Template_Mapping__mdt/fields/Pandadoc_CC_Fee_Estimate_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Pandadoc_CC_Fee_Estimate_Template_Id__c</fullName>
    <inlineHelpText>The Pandadoc template to use for initial Quotes that include Credit Card fee</inlineHelpText>
    <label>Pandadoc CC Fee Estimate Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>