force-app/main/default/objects/Pandadoc_Quote_Template_Mapping__mdt/fields/Pandadoc_CC_Fee_Invoice_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Pandadoc_CC_Fee_Invoice_Template_Id__c</fullName>
    <inlineHelpText>Maps to a Pandadoc Invoice template which includes a merge field for credit card fee</inlineHelpText>
    <label>Pandadoc CC Fee Invoice Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>