force-app/main/default/objects/Pandadoc_Quote_Template_Mapping__mdt/fields/Pandadoc_Estimate_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Pandadoc_Estimate_Template_Id__c</fullName>
    <inlineHelpText>The pandadoc identifier for the template to use for estimate generation</inlineHelpText>
    <label>Pandadoc Estimate Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>