force-app/main/default/objects/Pandadoc_Quote_Template_Mapping__mdt/fields/Pandadoc_Invoice_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Pandadoc_Invoice_Template_Id__c</fullName>
    <inlineHelpText>The Pandadoc template Id to use for final invoice generation.</inlineHelpText>
    <label>Pandadoc Invoice Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>