force-app/main/default/objects/Pandadoc_Quote_Template_Mapping__mdt/fields/Pandadoc_Proposal_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Pandadoc_Proposal_Template_Id__c</fullName>
    <inlineHelpText>The template used to generate the Proposal template which is essentially an Estimate template with Terms and Conditions attached and is sent after an Estimate is signed.</inlineHelpText>
    <label>Pandadoc Proposal Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>